--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/dropzone": "^6.0.10",
     "axios": "^1.3.5",
     "cra-template-cats": "1.1.4",
     "react": "^18.2.0",
