--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12"
   },
   "scripts": {
     "start": "react-scripts start",
